--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,13 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -19,34 +26,32 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".HomeActivity" />
+        <activity android:name=".SettingActivity" />
+        <activity android:name=".LostFindActivity" />
+        <activity android:name=".Setup1Activity" />
+        <activity android:name=".Setup2Activity" />
+        <activity android:name=".Setup3Activity" />
+        <activity android:name=".Setup4Activity" />
+
+        <receiver android:name="cn.example.mobilesafe.receiver.BootCompleteReceiver" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
+        <receiver android:name="cn.example.mobilesafe.receiver.SmsReceiver" >
+            <intent-filter android:priority="2147483647">
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+                <!--这个action在sdk中没有，在源代码里-->
+            </intent-filter>
+        </receiver>
+
         <activity
-            android:name=".HomeActivity"
-            android:label="@string/title_activity_home" >
+            android:name=".ContactsActivity"
+            android:label="@string/title_activity_contacts" >
         </activity>
-        <activity
-            android:name=".SettingActivity"
-            android:label="@string/title_activity_setting" >
-        </activity>
-        <activity
-            android:name=".LostFindActivity"
-            android:label="@string/title_activity_lost_find" >
-        </activity>
-        <activity
-            android:name=".Setup1Activity"
-            android:label="@string/title_activity_setup1" >
-        </activity>
-        <activity
-            android:name=".Setup2Activity"
-            android:label="@string/title_activity_setup2" >
-        </activity>
-        <activity
-            android:name=".Setup3Activity"
-            android:label="@string/title_activity_setup3" >
-        </activity>
-        <activity
-            android:name=".Setup4Activity"
-            android:label="@string/title_activity_setup4" >
-        </activity>
+        <service android:name="cn.example.mobilesafe.service.LocationService"></service>
     </application>
 
 </manifest>
