--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
     <application
         android:allowBackup="true"
@@ -35,6 +36,22 @@
         <activity android:name=".Setup2Activity" />
         <activity android:name=".Setup3Activity" />
         <activity android:name=".Setup4Activity" />
+        <activity
+            android:name=".ContactsActivity"
+            android:label="@string/title_activity_contacts" >
+        </activity>
+        <activity
+            android:name=".AToolsActivity"
+            android:label="@string/title_activity_atools" >
+        </activity>
+        <activity
+            android:name=".AddressActivity"
+            android:label="@string/title_activity_address" >
+        </activity>
+        <activity
+            android:name=".DragViewActivity"
+            android:label="@string/title_activity_drag_view" >
+        </activity>
 
         <receiver android:name="cn.example.mobilesafe.receiver.BootCompleteReceiver" >
             <intent-filter>
@@ -48,29 +65,10 @@
             </intent-filter>
         </receiver>
 
-        <activity
-            android:name=".ContactsActivity"
-            android:label="@string/title_activity_contacts" >
-        </activity>
-
         <service android:name="cn.example.mobilesafe.service.LocationService" />
-
-        <activity
-            android:name=".AToolsActivity"
-            android:label="@string/title_activity_atools" >
-        </activity>
-        <activity
-            android:name=".AddressActivity"
-            android:label="@string/title_activity_address" >
-        </activity>
-
         <service android:name="cn.example.mobilesafe.service.AddressService" >
         </service>
 
-        <activity
-            android:name=".DragViewActivity"
-            android:label="@string/title_activity_drag_view" >
-        </activity>
     </application>
 
 </manifest>
