--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cn.example.mobilesafe.activities" >
+    package="cn.example.mobilesafe.activities">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -13,16 +13,16 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".SplashActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -38,37 +38,42 @@
         <activity android:name=".Setup4Activity" />
         <activity
             android:name=".ContactsActivity"
-            android:label="@string/title_activity_contacts" >
-        </activity>
+            android:label="@string/title_activity_contacts"></activity>
         <activity
             android:name=".AToolsActivity"
-            android:label="@string/title_activity_atools" >
-        </activity>
+            android:label="@string/title_activity_atools"></activity>
         <activity
             android:name=".AddressActivity"
-            android:label="@string/title_activity_address" >
-        </activity>
+            android:label="@string/title_activity_address"></activity>
         <activity
             android:name=".DragViewActivity"
-            android:label="@string/title_activity_drag_view" >
-        </activity>
+            android:label="@string/title_activity_drag_view"></activity>
 
-        <receiver android:name="cn.example.mobilesafe.receiver.BootCompleteReceiver" >
+        <receiver android:name="cn.example.mobilesafe.receiver.BootCompleteReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-        <receiver android:name="cn.example.mobilesafe.receiver.SmsReceiver" >
-            <intent-filter android:priority="2147483647" >
+        <receiver android:name="cn.example.mobilesafe.receiver.SmsReceiver">
+            <intent-filter android:priority="2147483647">
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
                 <!-- 这个action在sdk中没有，在源代码里 -->
             </intent-filter>
         </receiver>
 
         <service android:name="cn.example.mobilesafe.service.LocationService" />
-        <service android:name="cn.example.mobilesafe.service.AddressService" >
-        </service>
+        <service android:name="cn.example.mobilesafe.service.AddressService" />
+        <service android:name="cn.example.mobilesafe.service.CallSafeService" />
 
+        <activity
+            android:name=".CallSafeActivity1"
+            android:label="@string/title_activity_call_safe"></activity>
+        <activity
+            android:name=".CallSafeActivity2"
+            android:label="@string/title_activity_call_safe"></activity>
+        <activity
+            android:name=".CallSafeActivity3"
+            android:label="@string/title_activity_call_safe"></activity>
     </application>
 
 </manifest>
